--- a/Snowapp/templates/index.html
+++ b/Snowapp/templates/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <!-- <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> -->
-  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="../static/css/style.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div id="background">
-                        <img src="steam_boat.jpeg" class="stretch" alt="" style="width:100%;height: 210px; clip-path: rect(0px,50px,1000px,0px)">
+                        <img src="../static/images/steam_boat.jpeg" class="stretch" alt="" style="width:100%;height: 210px; clip-path: rect(0px,50px,1000px,0px)">
                     </div>
                     <p id="banner">
                         Steamboat: Chute 1
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col-md-6">
                     <div id="background">
-                        <img src="vail.jpeg" class="stretch" alt="" style="width:100%;height: 210px; clip-path: rect(0px,50px,1000px,0px)">
+                        <img src="../static/images/vail.jpeg" class="stretch" alt="" style="width:100%;height: 210px; clip-path: rect(0px,50px,1000px,0px)">
                     </div>
                     <p id="banner">
                         Vail: Back Bowls
@@ -256,8 +256,7 @@
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-<script src="static/js/data.js"></script>
-<script src="static/js/app.js"></script> 
+<script src="./static/js/app.js"></script> 
 </body>
 
 </html>
